--- a/apps/dashboard.html.template
+++ b/apps/dashboard.html.template
@@ -258,7 +258,7 @@
                 "Content-Type": "application/json",
                 "X-User-Access-Token": this.token
               }
-            })
+            }).then(response => response).then(data => item.classList.add("is-danger"))
           } else if (from.dataset.groupName == "") {
             fetch(`${API_URL}/api/admin/filterable_values`, {
               method: "POST",
@@ -266,7 +266,7 @@
                 "Content-Type": "application/json",
                 "X-User-Access-Token": this.token
               },
-              body: JSON.stringify({"ad_option_type_id": optionId, "group_name": to.dataset.groupName, "raw_value": item.innerText})
+              body: JSON.stringify({"ad_option_type_id": optionId, "group_name": to.dataset.groupName, "raw_value": item.innerText}).then(response => response).then(data => item.classList.remove("is-danger"))
             })
           } else {
             fetch(`${API_URL}/api/admin/filterable_values/${item.dataset.id}`, {
