Split /dashboard and /manager SPAs

--- a/apps/budget.html.template
+++ b/apps/budget.html.template
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
-  <title>Valent Dashboard</title>
+  <title>Рекаріо | Знайти авто по бюджету</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Valent Dashboard" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
