--- a/default.conf
+++ b/default.conf
@@ -11,6 +11,7 @@ server {
 
     location = /budget { return 301 $scheme://$http_host/budget/; }
     location = /dashboard { return 301 $scheme://$http_host/dashboard/; }
+    location = /manager { return 301 $scheme://$http_host/manager/; }
     location ~ ^/ads/(\d+)$ { return 301 $scheme://$http_host/ads/$1/; }
 
     location /ios { return 302 https://apps.apple.com/us/app/id1458212603; }
@@ -57,6 +58,14 @@ server {
         }
     }
 
+    location ^~ /manager/ {
+        root /var/www/nginx/manager/;
+
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /index.html break;
+        }
+    }
+
     location ~ ^/ads/\d+/$ {
         root /var/www/nginx/ads/;
 
@@ -65,20 +74,20 @@ server {
         }
     }
 
-    # location /api/v1/sessions/ {
-    #     limit_req zone=login_ip burst=2 nodelay;
+    location /api/v1/sessions/ {
+        limit_req zone=login_ip burst=2 nodelay;
 
-    #     proxy_pass http://puma;
+        proxy_pass http://puma;
 
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_set_header X-Forwarded-Port $server_port;
-    #     proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Forwarded-Host $host;
 
-    #     add_header Access-Control-Allow-Origin "http://localhost:8080";
-    # }
+        add_header Access-Control-Allow-Origin "http://localhost:8080";
+    }
 
     location /cable {
         proxy_pass http://puma;
