add proxy_intercept_error: on; directive

--- a/default.conf
+++ b/default.conf
@@ -33,7 +33,7 @@ server {
       ssi on;
       internal;
       auth_basic off;
-      root /var/www/nginx/landing;
+      root /var/www/nginx/error;
     }
 
     location @puma {
@@ -49,6 +49,7 @@ server {
         proxy_set_header X-Forwarded-Host $host;
 
         add_header Access-Control-Allow-Origin "http://localhost:8080";
+        proxy_intercept_errors on;
     }
 
     location ^~ /budget/ {
@@ -112,5 +113,6 @@ server {
         proxy_set_header X-Forwarded-Host $host;
 
         add_header Access-Control-Allow-Origin "http://localhost:8080";
+        proxy_intercept_errors on;
     }
 }
