--- a/default.conf
+++ b/default.conf
@@ -21,10 +21,14 @@ server {
     location /chat { return 302 https://t.me/recar_io_chat; }
     location /whitepaper { return 302 https://assets.recar.io/Whitepaper.pdf; }
 
+    location = /health {
+        proxy_pass http://puma;
+    }
+
     location / {
         root /var/www/nginx/landing/;
         index index.html;
-        try_files $uri $uri.html $uri/index.html $uri/ @puma;
+        try_files $uri $uri.html $uri/index.html 404;
     }
 
     error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 500 501 502 503 504 505 506 507 508 510 511 /error.html;
@@ -34,22 +38,6 @@ server {
       internal;
       auth_basic off;
       root /var/www/nginx/error;
-    }
-
-    location @puma {
-        limit_req zone=req_ip burst=100 nodelay;
-
-        proxy_pass http://puma;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_set_header X-Forwarded-Host $host;
-
-        add_header Access-Control-Allow-Origin "http://localhost:8080";
-        proxy_intercept_errors on;
     }
 
     location ^~ /budget/ {
@@ -84,20 +72,35 @@ server {
         }
     }
 
-    # location /api/v1/sessions/ {
-    #     limit_req zone=login_ip burst=2 nodelay;
+    location /api/v1/sessions {
+        limit_req zone=login_ip burst=2 nodelay;
 
-    #     proxy_pass http://puma;
+        proxy_pass http://puma;
 
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_set_header X-Forwarded-Port $server_port;
-    #     proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Forwarded-Host $host;
 
-    #     add_header Access-Control-Allow-Origin "http://localhost:8080";
-    # }
+        add_header Access-Control-Allow-Origin "http://localhost:8080";
+    }
+
+    location /api {
+        limit_req zone=req_ip burst=100 nodelay;
+
+        proxy_pass http://puma;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Forwarded-Host $host;
+
+        add_header Access-Control-Allow-Origin "http://localhost:8080";
+    }
 
     location /cable {
         proxy_pass http://puma;
@@ -113,6 +116,5 @@ server {
         proxy_set_header X-Forwarded-Host $host;
 
         add_header Access-Control-Allow-Origin "http://localhost:8080";
-        proxy_intercept_errors on;
     }
 }
