--- a/apps/budget.html.template
+++ b/apps/budget.html.template
@@ -17,6 +17,25 @@
     body { min-height: 100vh }
     footer { margin-top: auto; }
   </style>
+  <!--Countly script-->
+  <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/countly-sdk-web@latest/lib/countly.min.js'></script>
+  <script type='text/javascript'>
+
+    Countly.init({
+      app_key: "5e489a68ae8bc064044601de7d25dedb25a0afc2",
+      url: "https://global-countly.dev.viktorvsk.com"
+    });
+    Countly.track_sessions();
+    Countly.track_pageview();
+    Countly.track_sessions();
+    Countly.track_pageview();
+    Countly.track_clicks();
+    Countly.track_scrolls();
+    Countly.track_errors();
+    Countly.track_links();
+    Countly.track_forms();
+    Countly.collect_from_forms();
+  </script>
 </head>
 <body class="is-flex is-flex-direction-column" x-data="App">
   <nav class="navbar is-black has-shadow" role="navigation" aria-label="main navigation">
