--- a/apps/ad.html.template
+++ b/apps/ad.html.template
@@ -18,6 +18,25 @@
     .breakable-string { white-space: normal!important; word-wrap: anywhere!important; height: auto!important; }
     .card{ max-width: 768px;  }
   </style>
+  <!--Countly script-->
+  <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/countly-sdk-web@latest/lib/countly.min.js'></script>
+  <script type='text/javascript'>
+
+    Countly.init({
+      app_key: "5e489a68ae8bc064044601de7d25dedb25a0afc2",
+      url: "https://global-countly.dev.viktorvsk.com"
+    });
+    Countly.track_sessions();
+    Countly.track_pageview();
+    Countly.track_sessions();
+    Countly.track_pageview();
+    Countly.track_clicks();
+    Countly.track_scrolls();
+    Countly.track_errors();
+    Countly.track_links();
+    Countly.track_forms();
+    Countly.collect_from_forms();
+  </script>
 </head>
 <body x-data="App">
   <nav class="navbar is-black has-shadow" role="navigation" aria-label="main navigation">
