--- a/default.conf
+++ b/default.conf
@@ -13,7 +13,7 @@ server {
     location = /dashboard { return 301 $scheme://$http_host/dashboard/; }
     location = /manager { return 301 $scheme://$http_host/manager/; }
     location ~ ^/ads/(\d+)$ { return 301 $scheme://$http_host/ads/$1/; }
-    location ~ "^\/ads\/([0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12})(\/)?$" { return 301 $scheme://$http_host/ads/$1/; }
+    location ~ "^\/ads\/([0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12})$" { return 301 $scheme://$http_host/ads/$1/; }
 
     location /ios { return 302 https://apps.apple.com/us/app/id1458212603; }
     location /apk { return 302 https://assets.recar.io/recario.apk; }
@@ -59,6 +59,14 @@ server {
 
     location ^~ /manager/ {
         root /var/www/nginx/manager/;
+
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /index.html break;
+        }
+    }
+
+    location ~ "^\/ads\/[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}\/$" {
+        root /var/www/nginx/ads/;
 
         if (!-e $request_filename){
             rewrite ^(.*)$ /index.html break;
