--- a/apps/dashboard.html.template
+++ b/apps/dashboard.html.template
@@ -59,45 +59,70 @@
                 </tbody>
               </table>
             </div>
-            <div class="columns" x-init="drawCharts(data)">
-              <div class='column is-one-third'>
-                <div class='mb-3'>
-                  <canvas id="MAU"></canvas>
+            <div x-init="drawCharts(data)">
+              <div class="columns">
+                <div class='column is-one-third'>
+                  <div class='mb-3'>
+                    <canvas id="MAU"></canvas>
+                  </div>
+                  <div class='mb-3'>
+                    <canvas id="DAU"></canvas>
+                  </div>
+                  <div class='mb-3'>
+                    <canvas id="DVA"></canvas>
+                  </div>
                 </div>
-                <div class='mb-3'>
-                  <canvas id="DAU"></canvas>
+                <div class='column is-one-third'>
+                  <div class='mb-3'>
+                    <H1 class="is-size-1">Ads</H1>
+                    <canvas class='m-auto' id="Ads"></canvas>
+                  </div>
+                  <div class='mb-3'>
+                    <H1 class="is-size-1">Users</H1>
+                    <canvas class='m-auto' id="Users"></canvas>
+                  </div>
+                  <div class='mb-3'>
+                    <H1 class="is-size-1">Devices</H1>
+                    <canvas class='m-auto' id="Devices"></canvas>
+                  </div>
                 </div>
-                <div class='mb-3'>
-                  <canvas id="DVA"></canvas>
+                <div class='column is-one-third'>
+                  <div class='mb-3'>
+                    <H1 class="is-size-1">Active Ads</H1>
+                    <canvas class='m-auto' id="ActiveAds"></canvas>
+                  </div>
+                  <div class='mb-3'>
+                    <H1 class="is-size-1">Users With Contacts</H1>
+                    <canvas class='m-auto' id="UsersWithContacts"></canvas>
+                  </div>
+                  <div class='mb-3'>
+                    <H1 class="is-size-1">User Contacts</H1>
+                    <canvas class='m-auto' id="UserContacts"></canvas>
+                  </div>
                 </div>
               </div>
-              <div class='column is-one-third'>
-                <div class='mb-3'>
-                  <H1 class="is-size-1">Ads</H1>
-                  <canvas class='m-auto' id="Ads"></canvas>
+              <div class="columns">
+                <div class='column mb-3'>
+                  <H1 class="is-size-1">Active Customers Ads</H1>
+                  <canvas class='m-auto' id="CustomersActive"></canvas>
                 </div>
-                <div class='mb-3'>
-                  <H1 class="is-size-1">Users</H1>
-                  <canvas class='m-auto' id="Users"></canvas>
+                <div class='column mb-3'>
+                  <H1 class="is-size-1">Customers Ads</H1>
+                  <canvas class='m-auto' id="CustomersAll"></canvas>
                 </div>
-                <div class='mb-3'>
-                  <H1 class="is-size-1">Devices</H1>
-                  <canvas class='m-auto' id="Devices"></canvas>
+                <div class='column mb-3'>
+                  <H1 class="is-size-1">Potential Customers Ads</H1>
+                  <canvas class='m-auto' id="PotentialCustomersAll"></canvas>
                 </div>
-
               </div>
-              <div class='column is-one-third'>
-                <div class='mb-3'>
-                  <H1 class="is-size-1">Active Ads</H1>
-                  <canvas class='m-auto' id="ActiveAds"></canvas>
+              <div class="columns">
+                <div class='column mb-3'>
+                  <H1 class="is-size-1">Devices Builds</H1>
+                  <canvas class='m-auto' id="DevicesBuilds"></canvas>
                 </div>
-                <div class='mb-3'>
-                  <H1 class="is-size-1">Users With Contacts</H1>
-                  <canvas class='m-auto' id="UsersWithContacts"></canvas>
-                </div>
-                <div class='mb-3'>
-                  <H1 class="is-size-1">User Contacts</H1>
-                  <canvas class='m-auto' id="UserContacts"></canvas>
+                <div class='column mb-3'>
+                  <H1 class="is-size-1">Cell Operators</H1>
+                  <canvas class='m-auto' id="CellOperators"></canvas>
                 </div>
               </div>
             </div>
@@ -128,8 +153,14 @@
           new Chart(document.getElementById('Users'), this.basePieChart([data.users_count - data.users_with_no_contacts_count, data.users_with_no_contacts_count], ['w Contacts', 'w/o Contacts']));
           new Chart(document.getElementById('ActiveAds'), this.basePieChart([data.effective_ads_count, data.active_ads_count - data.effective_ads_count], ['Effective', 'Other']));
           new Chart(document.getElementById('Devices'), this.basePieChart(JSON.parse(data.user_devices_os_data).map(d => d.count), JSON.parse(data.user_devices_os_data).map(d => d.os_title)));
+          new Chart(document.getElementById('DevicesBuilds'), this.basePieChart(JSON.parse(data.user_devices_build_data).map(d => d.count), JSON.parse(data.user_devices_build_data).map(d => d.build_code)));
           new Chart(document.getElementById('UsersWithContacts'), this.basePieChart([((data.users_count - data.users_with_no_contacts_count) - data.users_with_no_connections_count), data.users_with_no_connections_count], ['Have Connections', 'No Connections']));
           new Chart(document.getElementById('UserContacts'), this.basePieChart([data.user_contacts_count - data.uniq_user_contacts_count, data.uniq_user_contacts_count], ['Duplicate', 'Unique']));
+          new Chart(document.getElementById('CustomersActive'), this.basePieChart(JSON.parse(data.users_active_ads_distr_data).map(d => d.users_count), JSON.parse(data.users_active_ads_distr_data).map(d => `${d.ads_count} ads`)));
+          new Chart(document.getElementById('CustomersAll'), this.basePieChart(JSON.parse(data.users_all_ads_distr_data).map(d => d.users_count), JSON.parse(data.users_all_ads_distr_data).map(d => `${d.ads_count} ads`)));
+          new Chart(document.getElementById('PotentialCustomersAll'), this.basePieChart(JSON.parse(data.potential_users_ads_distr_data).map(d => d.users_count), JSON.parse(data.potential_users_ads_distr_data).map(d => `${d.ads_count} ads`)));
+          new Chart(document.getElementById('CellOperators'), this.basePieChart(JSON.parse(data.cell_operators_distr_data).map(d => d.count), JSON.parse(data.cell_operators_distr_data).map(d => `(0${d.operator})`)));
+
         },
         async getDashboardData() {
           return fetch(`${API_URL}/api/integrations/dashboard?access_token=${this.token}`)
@@ -180,7 +211,6 @@
             labels: labels,
             },
             options: {
-              responsive: false,
               plugins: {
                   tooltip: {
                       callbacks: {
