Open /sidekiq endpoint for carbo

--- a/default.conf
+++ b/default.conf
@@ -93,6 +93,12 @@ server {
         proxy_pass http://puma;
     }
 
+    location /sidekiq {
+        limit_req zone=req_ip burst=100 nodelay;
+
+        proxy_pass http://puma;
+    }
+
     location /cable {
         proxy_pass http://puma;
 
