Add personal NIP-5

--- a/default.conf
+++ b/default.conf
@@ -32,6 +32,10 @@ server {
         try_files $uri $uri.html $uri/index.html 404;
     }
 
+    location = /.well-known/nostr.json {
+        alias /var/www/nginx/nostr.json;
+    }
+
     error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 500 501 502 503 504 505 506 507 508 510 511 /error.html;
 
     location = /error.html {
